# oss-connector-for-ai-ml

./: LICENSE  README.md  pyproject.toml  setup.py  ver_tag.py
.github/workflows/: build_wheel.yml  push_image.yml
.github/workflows/build_wheel/: Dockerfile
osstorchconnector/: __init__.py  _oss_bucket_iterable.py  _oss_client.py  oss_checkpoint.py  oss_iterable_dataset.py  oss_map_dataset.py
osstorchconnector/_oss_connector/: __init__.py  oss_connector.pyi
